[EAT] Enhance scripts 'run-eat' and delete no longer required script